Adjust Bible text navigation, fix alignment in plans forms, add front-end validations to signup

--- a/react-app/src/components/NotesBox/NotesBox.css
+++ b/react-app/src/components/NotesBox/NotesBox.css
@@ -101,11 +101,9 @@
 
 
 .note-input {
-    max-height: 150px;
     height: 80px;
     width: 200px;
-    max-width: 100%;
-    min-width: 100px;
+    resize: none;
 }
 
 .no-margin {
